--- a/templates/index.html
+++ b/templates/index.html
@@ -110,11 +110,12 @@
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
 									<!-- <img src="https://i.ibb.co/fSNP7Rz/icons8-chatgpt-512.png" class="rounded-circle user_img"> -->
-									<img src="https://p7.hiclipart.com/preview/1010/961/279/computer-icons-source-code-html-coding.jpg" class="rounded-circle user_img">
+									<!-- <img src="https://p7.hiclipart.com/preview/1010/961/279/computer-icons-source-code-html-coding.jpg" class="rounded-circle user_img"> -->
+									<img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/572/small/youtube-logo-youtube-icon-transparent-free-png.png" class="rounded-circle user_img">
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
-									<span>Source Code Analysis</span>
+									<span>YouTube Video Bot</span>
 									<p>Ask anything!</p>
 								</div>
 							</div>
